# techr

./: .gitignore  Cargo.toml  Makefile  README.md
core/: Cargo.toml
core/src/: lib.rs  testutils.rs  utils.rs
core/src/momentum/: adx.rs  adxr.rs  aroon.rs  aroonosc.rs  cci.rs  cmf.rs  co.rs  disp.rs  dmi.rs  eom.rs  erbear.rs  erbull.rs  macd.rs  massi.rs  mfi.rs  mod.rs  mom.rs  nvi.rs  ppo.rs  psl.rs  pvi.rs  roc.rs  rsi.rs  sonar.rs  stochf.rs  stochrsi.rs  stochs.rs  ultosc.rs  willr.rs
core/src/overlap/: ema.rs  env.rs  ichimoku.rs  mod.rs  (+4 more)
data/: 005930.json  PEPE.json  TSLA.json
data/expected/: MFI_005930.json  MFI_TSLA.json  ad_005930.json  ad_TSLA.json  adx_005930.json  adx_TSLA.json  adxr_005930.json  adxr_TSLA.json  aroon_down_005930.json  aroon_down_TSLA.json  aroon_up_005930.json  aroon_up_TSLA.json  aroonosc_005930.json  aroonosc_TSLA.json  atr_005930.json  atr_TSLA.json  bband_lower_005930.json  bband_lower_TSLA.json  bband_upper_005930.json  bband_upper_TSLA.json  cci_005930.json  cci_TSLA.json  cmf_005930.json  cmf_TSLA.json  co_005930.json  co_TSLA.json  cv_005930.json  cv_TSLA.json  disp_005930.json  disp_TSLA.json  dmi_minus_005930.json  dmi_minus_TSLA.json  dmi_plus_005930.json  dmi_plus_TSLA.json  efi_005930.json  efi_TSLA.json  ema_005930.json  ema_TSLA.json  env_lower_005930.json  env_lower_TSLA.json  (+94 more)
polars/: Cargo.toml  pyproject.toml
polars/polars_techr/: __init__.py  types.py
polars/src/: expressions.rs  lib.rs
src/: lib.rs  utils.rs
src/momentum/: rsi.rs
src/trend/: mod.rs  sma.rs  wma.rs
src/volatility/: bb.rs  mod.rs
(+14 files in other folders)
