[tool.poetry]
name = "polars-techr"
version = "0.1.0"
description = "Python wrapper for polars-techr"
authors = ["sjquant <seonujang92@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^1.7.1"

[tool.poetry.group.dev.dependencies]
maturin = "^1.7.1"
ruff = "^0.6.5"
pyright = "^1.1.380"
pytest = "^8.3.3"

[build-system]
requires = ["maturin>=1.0,<2.0", "polars>=1.7.1"]
build-backend = "maturin"
